# papersearch_chatbot

./: .env.template  README.md  gradio_main.py  main.py  pipeline.py  pyproject.toml
crawler/: elicit_browser.py
deepsight/: pipeline.py
deepsight/crawler/: __init__.py
deepsight/models/: __init__.py  search_query_model.py
models/: chat_model.py  score_model.py  search_query_model.py  utils.py
papersearch_chatbot/: pipeline.py
papersearch_chatbot/crawler/: elicit_browser.py
papersearch_chatbot/models/: chat_model.py  utils.py
